--- a/source/extensions/extensions_metadata.yaml
+++ b/source/extensions/extensions_metadata.yaml
@@ -338,6 +338,7 @@ envoy.filters.http.file_system_buffer:
 envoy.filters.http.gcp_authn:
   categories:
   - envoy.filters.http
+  - envoy.filters.http.upstream
   security_posture: unknown
   status: alpha
   type_urls:
